[gd_scene load_steps=7 format=3 uid="uid://bxrdan7sk51jh"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_8nsbm"]
[ext_resource type="Theme" uid="uid://dh1v3rke5y04p" path="res://assets/themes/Menu_Theme.tres" id="2_ucati"]
[ext_resource type="PackedScene" uid="uid://cvfar7cmhhjgq" path="res://scenes/settings.tscn" id="3_0shom"]
[ext_resource type="PackedScene" uid="uid://cgvldrw2eexr4" path="res://scenes/high_score_display.tscn" id="4_8jirv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u675c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kwhcq"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nsbm")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 145.0
offset_right = 816.0
offset_bottom = 545.0
theme = ExtResource("2_ucati")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_offset_x = 5
bbcode_enabled = true
text = "Beach Clean Up Crew"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -93.0
offset_right = 49.5
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ucati")

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ReturnToMenu")
focus_neighbor_bottom = NodePath("../ReturnToMenu")
theme = ExtResource("2_ucati")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u675c")
text = "Restart"

[node name="High Scores" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ucati")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kwhcq")
text = "High Scores
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ucati")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kwhcq")
text = "Options"

[node name="ReturnToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Restart")
focus_neighbor_bottom = NodePath("../Restart")
theme = ExtResource("2_ucati")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kwhcq")
text = "Return To Main Menu"

[node name="BackToGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_kwhcq")
text = "Back To Game"

[node name="Settings" parent="." instance=ExtResource("3_0shom")]
visible = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_right = 400.0

[node name="HighScoreContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HighScoreDisplay" parent="HighScoreContainer" instance=ExtResource("4_8jirv")]
layout_mode = 2
size_flags_vertical = 4

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/High Scores" to="." method="_on_high_scores_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnToMenu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToGame" to="." method="_on_back_to_game_pressed"]
[connection signal="close_settings" from="Settings" to="." method="_on_settings_close_settings"]
[connection signal="close_score" from="HighScoreContainer/HighScoreDisplay" to="." method="_on_high_score_display_close_score"]
